Fix touch not working on mobile issue, pixel pushing

--- a/builds/development/styles/style.less
+++ b/builds/development/styles/style.less
@@ -6,14 +6,6 @@ body {
 
 .code-box {
   font-size: 20px;
-
-  pre {
-    white-space: pre-wrap;       /* CSS 3 */
-    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-    white-space: -pre-wrap;      /* Opera 4-6 */
-    white-space: -o-pre-wrap;    /* Opera 7 */
-    word-wrap: break-word;       /* Internet Explorer 5.5+ */
-  }
 }
 
 .nav-menu {
@@ -85,14 +77,12 @@ body {
 
 .page {
   width: 90%;
-  position:absolute;
-}
-
-.page {
   &.ng-leave {
+    position: absolute;
     z-index: 9999;
   }
   &.ng-enter {
+    position: absolute;
     z-index: 8888;
   }
 }
